--- a/style.css
+++ b/style.css
@@ -258,12 +258,14 @@ cursor: pointer;}
 }
 
 a{
-    color: #FFF;
+    color: #4340fe;
     font-size: 16px;
     font-weight: 400;}
     
     a:hover{
-        font-weight: 500;}
+        /* font-weight: 500; */
+        color: #1914ff;
+}
     
 
 .bodydesc {
